--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "supermall2",
+  "name": "supermall",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,7 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.22.0",
+    "better-scroll": "^2.3.1",
     "core-js": "^3.6.5",
+    "element-plus": "^1.1.0-beta.19",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
@@ -17,7 +20,11 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0"
+    "@vue/compiler-sfc": "^3.0.0",
+    "less": "^4.1.1",
+    "less-loader": "^10.0.1",
+    "sass": "^1.42.1",
+    "sass-loader": "^12.1.0"
   },
   "browserslist": [
     "> 1%",
